<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:title="@string/refresh"
        android:id="@+id/refresh"
        android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="ifRoom" />

    <item android:title="@string/change_game_level"
        android:id="@+id/miGameLevel"
        app:showAsAction="never"/>

    <item android:title="@string/create_custom_game"
        android:id="@+id/miCreateCustomGame"
        app:showAsAction="never"/>

    <item android:title="@string/download_custom_game"
        android:id="@+id/miDownloadCustomGame"
        app:showAsAction="never"/>

    <item android:title="About"
        android:id="@+id/miAbout"
        app:showAsAction="never" />

    <item android:title="Contact"
        android:id="@+id/miContact"
        app:showAsAction="never" />
</menu>