<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy_4_2"
            android:checked="true"
            android:textSize="18sp"
            tools:text="Easy (4*2)" />

        <RadioButton
            android:id="@+id/rb_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_6_3"
            android:textSize="18sp"
            tools:text="Medium (6*3)" />

        <RadioButton
            android:id="@+id/rb_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard_6_4"
            android:textSize="18sp"
            tools:text="Hard (6*4)" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>